fixed issue with absolute position on safari browser

--- a/src/sass/views/onboarding/onboard-disclaimer.scss
+++ b/src/sass/views/onboarding/onboard-disclaimer.scss
@@ -1,5 +1,12 @@
 #onboarding-disclaimer {
   color: #fff;
+  height: 100%;
+  ion-content{
+    height: 100%;
+    .scroll{
+      height: 100%;
+    }
+  }
   .item {
     background: transparent;
     border: none;
